# skedly

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  file_presentation.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: deploy.md  fase4-handoff.md  fase5-handoff.md  fase6-handoff.md  fase7-handoff.md  multi-user-handoff.md
nginx/: secretary.conf  skedly.conf
prompts/: classify_intent.md  daily_briefing.md  plan_action.md  system.md
scripts/: run_graph_local.py  setup_clickup_webhooks.py  setup_telegram_webhook.py
src/config/: __init__.py  settings.py
src/gateway/: app.py  limiter.py  validators.py
src/gateway/routes/: auth.py  calendar.py  clickup.py  telegram.py
src/graph/: builder.py  edges.py  state.py
src/graph/nodes/: classify_intent.py  execute_tools.py  format_response.py  gather_context.py  plan_action.py
src/llm/: providers.py  router.py
src/memory/: checkpointer.py  conversation.py  database.py  models.py  preferences.py
src/scheduler/: jobs.py  setup.py
src/tools/: __init__.py  _google_auth.py  calendar.py  clickup.py  datetime_utils.py  memory_tools.py  reminders.py
tests/: conftest.py
tests/test_gateway/: test_clickup_webhook.py  test_health.py  test_logging.py  test_rate_limit.py  test_webhooks.py
tests/test_graph/: test_edges.py  test_full_graph.py  test_nodes.py  test_state.py
tests/test_integration/: test_full_flow.py
tests/test_llm/: test_router.py
tests/test_memory/: test_conversation.py  test_preferences.py
tests/test_scheduler/: test_jobs.py
tests/test_tools/: test_calendar.py  test_clickup.py  test_datetime_utils.py  test_memory_tools.py  test_reminders.py  test_retry.py
